--- a/src/pages/user/vaccine/style.module.scss
+++ b/src/pages/user/vaccine/style.module.scss
@@ -19,6 +19,8 @@
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
+  justify-content: center;
+
   // background-color: aqua;
   // max-height: 32em;
   // overflow: scroll;
@@ -62,7 +64,7 @@
     line-height: 1;
     h2 {
       font-weight: 900;
-      font-size: 3em;
+      font-size: 2.5em;
       padding: 0.3em 0 0 0;
       line-height: 1;
     }
@@ -102,6 +104,83 @@
         font-size: 1.5em;
         margin: 0;
         line-height: 1;
+      }
+    }
+  }
+}
+
+// card 2
+
+.Card2 {
+  display: flex;
+  flex-direction: row;
+  margin: 0em 0.7em 1em 0.7em;
+  width: 23em;
+
+  .CardBody {
+    display: flex;
+    flex-direction: column;
+    padding: 0;
+  }
+
+  .StatCategory {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #eaecee;
+    padding: 0em 1em;
+
+    h3 {
+      font-weight: 650;
+      font-size: 16pt;
+      padding: 0.3em 0em;
+      line-height: 1;
+      // color: $blue;
+      margin: 0;
+    }
+  }
+
+  .Stat2 {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    .Number {
+      font-weight: 700;
+      font-size: 30pt;
+      padding: 0.3em 0em;
+      line-height: 1;
+      color: rgb(31, 31, 31);
+      margin: 0;
+    }
+
+    .Rates {
+      line-height: 0;
+      padding-top: 0.5em;
+
+      .Active {
+        color: $yellow;
+        font-size: 11pt;
+      }
+
+      .Recov {
+        color: $green;
+        font-size: 11;
+      }
+
+      .Dts {
+        color: $red;
+        font-size: 11pt;
+      }
+    }
+
+    .percentage {
+      color: rgb(58, 58, 58);
+      margin: -0.5em 0 0.5em 0;
+
+      b {
+        color: black;
       }
     }
   }
